--- a/SourceCode/2023/April2023/Week1/Calculator/Mod Operation.xaml
+++ b/SourceCode/2023/April2023/Week1/Calculator/Mod Operation.xaml
@@ -2,12 +2,12 @@
   <x:Members>
     <x:Property Name="Num1" Type="InArgument(x:Int32)" />
     <x:Property Name="Num2" Type="InArgument(x:Int32)" />
-    <x:Property Name="Out_mod" Type="InArgument(x:Int32)" />
+    <x:Property Name="Out_mod" Type="OutArgument(x:Int32)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>808,671.3333333333334</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>812.6666666666666,671.3333333333334</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Mod_Operation_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
